# MasterCode

./: Cargo.toml  README.md
checker/: Cargo.toml
checker/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
player/: Cargo.toml
player/src/: main.rs
player/web/: index.html
server/: Cargo.toml
server/src/: main.rs
