[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
actix-web = "4.0"
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
get_if_addrs = "0.5.3"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
